--- a/index.html
+++ b/index.html
@@ -53,10 +53,18 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
 <div id="impress">
     <!-- each slide must be a div with class step,  must have some co-ordinates -->
     <div id="title" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
-        <h1>Content &amp; Data Mining Research Topics in Social Science</h1>
+        <h1><img id="scienceeurope" src="img/scienceeurope.png" /><br />
+                Content Mining in Social&nbsp;Sciences
+                </h1>
+                
         <p class="name">Dr. Alexander O&apos;Connor</p>
-        <p class="contact"><i class="fa fa-envelope"></i><a href="mailto:Alexander.OConnor@dcu.ie"> Alexander.OConnor@dcu.ie</p>
-            <p class="contact">@<a href="http://www.twitter.com/uberalex">uberalex</a></p>
+        <p class="contact">
+        <i class="fa fa-envelope"></i>
+        <a href="mailto:Alexander.OConnor@dcu.ie"> Alexander.OConnor@dcu.ie</a>
+        <i class="fa fa-twitter"></i> <a
+            href="http://www.twitter.com/uberalex">@uberalex</a>
+            <i class="fa fa-link"></i><a
+                href="http://www.oconnoat.com"> http://www.oconnoat.com</a></p>
             <div id="foot">
                 <a href="http://www.adaptcentre.ie"><img src="img/adapt.png" /></a>
                 <a href="http://www.dariah.eu"><img src="img/dariah.png"></a>
@@ -163,7 +171,7 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
                 epidemic on Twitter: challenges for health informatics.
             </em> In: Proceedings of;. 17th International Symposium on Health Information Management Research – ISHIMR 2015, York, UK, 25-26 June 2015</p>
         </div>
-        <div id="GovernmentData" class="step contained" data-x="2600" data-y="0" data-z="200"
+        <div id="GovernmentData" class="step contained" data-x="2600" data-y="-50" data-z="200"
             data-rotate-x="0" data-rotate-y="0" data-rotate-z="0"
             data-scale="0.25">
             <div id="enron">
@@ -212,7 +220,7 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
             </div>
         </div>       
         <div id="WebExperiments" class="step contained" data-x="2200"
-            data-y="0" data-z="200"
+            data-y="-50" data-z="200"
             data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="0.25">
             <img src="img/turk.jpg" />
             <p class="source">John Bohannon <em>Social Science for
@@ -229,8 +237,8 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
                 nothing more than a mug shot.</p>
             </div>
         </div>
-        <div id="Reproducibility" class="step" data-x="2300" data-y="2000"
-            data-z="-2500" data-rotate-x="0" data-rotate-y="90" data-rotate-z="0" data-scale="0.25">
+        <div id="Reproducibility" class="step" data-x="3000" data-y="3000"
+            data-z="-500" data-rotate-x="0" data-rotate-y="90" data-rotate-z="0" data-scale="0.25">
             <p class="quote">In very specific situations, it can be effectively illegal
             under UK law to conduct a replication study</p>
             <p class="source">Pete Etchells <em>Replication frustration:
