--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
             American and Indian subjects predicted the
             winners of Brazilian political races based on
             nothing more than a mug shot.</p>
+            <p><a href="https://www.socialpsychology.org/expts.htm">Social
+                Psychology Experiments online</a></p>
         </div>
     </div>
     <div id="Reproducibility" class="step" data-x="3000" data-y="3000"
