--- a/index.html
+++ b/index.html
@@ -66,9 +66,23 @@ href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis">
         <i class="fa fa-link"></i><a
             href="http://www.oconnoat.com"> http://www.oconnoat.com</a></p>
         <div id="foot">
+         
             <a href="http://www.adaptcentre.ie"><img src="img/adapt.png" /></a>
             <a href="http://www.dariah.eu"><img src="img/dariah.png"></a>
             <a href="http://www.dcu.ie"><img src="img/dcu.jpg"></a>
+
+            `
+            <p class="license">
+            <a rel="license"
+                href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                alt="Creative Commons Licence" style="border-width:0"
+                src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span
+                xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content Mining in the
+                Social Sciences</span> by <a xmlns:cc="http://creativecommons.org/ns#"
+                href="http://oconnoat.github.io/openScience15/" property="cc:attributionName"
+                rel="cc:attributionURL">Alexander O'Connor</a> is licensed under a <a
+                rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
+                Commons Attribution-ShareAlike 4.0 International License</a>.</p>
         </div>
     </div>
     <div id="definition" class="step big" data-x="1200" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
